Fix the z-index of the dropdown

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,7 @@ body, h1, p {
     border-top: none !important;
     border-radius: 4px;
     padding: 16px;
+    z-index: 999;
     
 }
 
